--- a/config/locales/fra/support.yml
+++ b/config/locales/fra/support.yml
@@ -105,7 +105,8 @@ fra:
   time:
     am: "am"
     formats:
-      default: "%d %b. %Y à %H:%M:%S"
+      db: "%Y-%m-%d %H:%M"
+      default: "%d/%m/%Y %H:%M"
       long: "%B %d, %Y %H:%M"
       short: "%d %b %H:%M"
     pm: "pm"
