--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -449,14 +449,18 @@ arb:
       # edit: "Modifier la culture\_: %{name}"
       # index: "Cutures"
       # new: "Nouvelle culture"
-      # show: "Culture\_: %{name} "
+      # show: "Culture\_: %{name}"
     backend/posologies: #?
     backend/preferences:
       # edit: "Modifier les préférences"
       # index: "Préférences"
       # new: "Nouvelle préférence"
       # show: "Préférence"
-    backend/prescriptions: #?
+    backend/prescriptions:
+      # edit: "Modifier la prescription\_: %{reference_number}"
+      # index: "Prescriptions"
+      # new: "Nouvelle prescription"
+      # show: "Prescription\_: %{reference_number}"
     backend/prices:  #?
       import: "CSV استيراد بيان التعرفة ضمن" #?
       index: "الاسعار" #?
