--- a/config/locales/fra/prints/animal_sanitary_list.xml
+++ b/config/locales/fra/prints/animal_sanitary_list.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="animal_sanitary_list" language="groovy" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="786" leftMargin="28" rightMargin="28" topMargin="28" bottomMargin="28" isTitleNewPage="true" whenResourceMissingType="Empty" uuid="9c1f11b7-03dd-4803-9e1b-41b87b9d23c0">
-	<property name="ireport.zoom" value="1.331000000000001"/>
-	<property name="ireport.x" value="269"/>
+	<property name="ireport.zoom" value="0.9558924531310702"/>
+	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<template><![CDATA["/home/djoulin/ekylibre/config/corporate-identity/reports-style.jrtx"]]></template>
 	<style name="Title" fontName="DejaVu Sans" fontSize="30" isBold="true" pdfFontName="Times-Bold"/>
@@ -103,6 +103,18 @@
 	<field name="quantity_unit" class="java.lang.String">
 		<fieldDescription><![CDATA[@quantity_unit]]></fieldDescription>
 	</field>
+	<field name="target_id" class="java.lang.String">
+		<fieldDescription><![CDATA[@target_id]]></fieldDescription>
+	</field>
+	<field name="worker_entity_id" class="java.lang.String">
+		<fieldDescription><![CDATA[@worker_entity_id]]></fieldDescription>
+	</field>
+	<field name="entity_breeding_number" class="java.lang.String">
+		<fieldDescription><![CDATA[ancestor::interventions/@entity_breeding_number]]></fieldDescription>
+	</field>
+	<field name="entity_adress" class="java.lang.String">
+		<fieldDescription><![CDATA[ancestor::interventions/@entity_adress]]></fieldDescription>
+	</field>
 	<group name="campaign" isStartNewPage="true">
 		<groupExpression><![CDATA[$F{campaign}]]></groupExpression>
 	</group>
@@ -110,7 +122,7 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="39" splitType="Stretch">
+		<band height="444" splitType="Stretch">
 			<staticText>
 				<reportElement uuid="5b202e71-e4a3-4be8-8dcb-f735cc04164a" style="strong" mode="Opaque" x="2" y="29" width="784" height="2" backcolor="#7C9DDD"/>
 				<textElement verticalAlignment="Middle">
@@ -132,15 +144,68 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$F{campaign}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement uuid="6e0769cf-38a5-42a5-9a6e-7f073c13bdeb" x="0" y="171" width="786" height="40"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Open Sans" size="24" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{entity_name}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="64dbde96-ffbe-4bd0-9827-2ef1068e6a1f" x="0" y="211" width="786" height="40"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="Open Sans" size="24"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{entity_breeding_number}]]></textFieldExpression>
+			</textField>
+			<textField isBlankWhenNull="true">
+				<reportElement uuid="b60f24a3-d657-4f3f-8872-1ce3bef0f9e0" style="address" x="0" y="251" width="786" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle"/>
+				<textFieldExpression><![CDATA[$F{entity_adress}]]></textFieldExpression>
+			</textField>
 		</band>
 	</title>
 	<pageHeader>
-		<band height="25" splitType="Stretch">
+		<band height="84" splitType="Stretch">
 			<textField>
-				<reportElement uuid="548666df-fcbc-42e7-b461-8ee8b327b70e" style="address" x="0" y="0" width="786" height="25"/>
+				<reportElement uuid="548666df-fcbc-42e7-b461-8ee8b327b70e" style="address" x="0" y="0" width="786" height="13"/>
 				<textElement textAlignment="Center" verticalAlignment="Top"/>
 				<textFieldExpression><![CDATA["Carnet sanitaire de la campagne "+$F{campaign}]]></textFieldExpression>
 			</textField>
+			<rectangle radius="10">
+				<reportElement uuid="23e8397b-4700-4711-8745-7a13f840a2b8" style="conditionnal_state" x="198" y="54" width="10" height="10" backcolor="#FF0000">
+					<printWhenExpression><![CDATA[$F{state} != null]]></printWhenExpression>
+				</reportElement>
+			</rectangle>
+			<staticText>
+				<reportElement uuid="edc9f11e-f430-4080-9bf8-bd2893724afb" style="base" mode="Transparent" x="208" y="48" width="56" height="22"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans" size="10"/>
+					<paragraph leftIndent="5"/>
+				</textElement>
+				<text><![CDATA[En cours]]></text>
+			</staticText>
+			<rectangle radius="10">
+				<reportElement uuid="260e787e-6da2-4c2e-9949-dbf26fb4c20c" style="conditionnal_state" x="275" y="54" width="10" height="10" backcolor="#33CC00">
+					<printWhenExpression><![CDATA[$F{state} != null]]></printWhenExpression>
+				</reportElement>
+			</rectangle>
+			<staticText>
+				<reportElement uuid="8c8d3297-f23b-47c1-bf88-e89a2adde276" style="base" mode="Transparent" x="287" y="48" width="49" height="22"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans" size="10"/>
+					<paragraph leftIndent="5"/>
+				</textElement>
+				<text><![CDATA[Résolu]]></text>
+			</staticText>
+			<staticText>
+				<reportElement uuid="6c3b38e3-fa18-4ce1-afca-00110dd02c2a" style="table-th" mode="Transparent" x="192" y="26" width="166" height="44"/>
+				<textElement textAlignment="Center" verticalAlignment="Top">
+					<font fontName="DejaVu Sans" size="10"/>
+					<paragraph leftIndent="5" spacingBefore="5"/>
+				</textElement>
+				<text><![CDATA[Incident]]></text>
+			</staticText>
 		</band>
 	</pageHeader>
 	<columnHeader>
@@ -151,7 +216,7 @@
 					<font fontName="DejaVu Sans" size="10"/>
 					<paragraph leftIndent="5"/>
 				</textElement>
-				<text><![CDATA[Date début / fin]]></text>
+				<text><![CDATA[Date début / date fin]]></text>
 			</staticText>
 			<staticText>
 				<reportElement uuid="8c03c7d1-59ce-4a3e-b107-731138094210" style="table-th" mode="Transparent" x="81" y="0" width="111" height="47"/>
@@ -229,6 +294,12 @@
 	</columnHeader>
 	<detail>
 		<band height="40" splitType="Stretch">
+			<rectangle>
+				<reportElement uuid="2d99775a-646f-4357-b1d4-9e6b1e217177" mode="Transparent" x="708" y="0" width="78" height="39"/>
+			</rectangle>
+			<rectangle>
+				<reportElement uuid="95f32bce-eaff-4126-87bb-902735499158" mode="Transparent" x="358" y="0" width="89" height="39"/>
+			</rectangle>
 			<textField pattern="dd/MM/yyyy" isBlankWhenNull="true">
 				<reportElement uuid="0339ffa3-8998-4dab-897d-fe28061d4c98" style="base" x="0" y="0" width="81" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
@@ -240,7 +311,7 @@
 				<textFieldExpression><![CDATA[$F{stopped_at}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="ee5f9f81-ece7-485a-aded-f878c5f986e2" style="base" x="81" y="20" width="111" height="20"/>
+				<reportElement uuid="ee5f9f81-ece7-485a-aded-f878c5f986e2" style="base" x="117" y="20" width="75" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{target_identification}]]></textFieldExpression>
 			</textField>
@@ -256,12 +327,12 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{prescriptor}]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true" hyperlinkType="ReportExecution" hyperlinkTarget="Blank">
+			<textField isBlankWhenNull="true" hyperlinkType="Reference" hyperlinkTarget="Blank">
 				<reportElement uuid="a58786b7-0578-49b2-9a19-cd3cb2d16144" style="base" x="358" y="0" width="89" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{reference_number}]]></textFieldExpression>
 			</textField>
-			<textField>
+			<textField hyperlinkType="Reference">
 				<reportElement uuid="2dd1edbf-6bd2-4033-99e6-a0d6e04234a0" style="base" x="708" y="0" width="78" height="40"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{worker_name}]]></textFieldExpression>
@@ -299,16 +370,13 @@
 				<patternExpression><![CDATA["###0.00 "+$F{quantity_unit}]]></patternExpression>
 			</textField>
 			<rectangle>
-				<reportElement uuid="3bc54923-9c6a-4bbc-b071-67d7a9ecf1a1" mode="Transparent" x="0" y="1" width="81" height="38"/>
+				<reportElement uuid="3bc54923-9c6a-4bbc-b071-67d7a9ecf1a1" mode="Transparent" x="0" y="0" width="81" height="39"/>
 			</rectangle>
 			<rectangle>
-				<reportElement uuid="7a34b150-fc8b-451d-bc81-849a41f970ab" mode="Transparent" x="81" y="1" width="111" height="38"/>
+				<reportElement uuid="7a34b150-fc8b-451d-bc81-849a41f970ab" mode="Transparent" x="81" y="0" width="111" height="39"/>
 			</rectangle>
 			<rectangle>
 				<reportElement uuid="fcbd3841-1898-4f14-b865-676de0d0d238" mode="Transparent" x="192" y="0" width="166" height="39"/>
-			</rectangle>
-			<rectangle>
-				<reportElement uuid="95f32bce-eaff-4126-87bb-902735499158" mode="Transparent" x="358" y="0" width="89" height="39"/>
 			</rectangle>
 			<rectangle>
 				<reportElement uuid="ddcf59f6-8d7d-4b5c-a7e6-66260fdcb2a9" mode="Transparent" x="447" y="0" width="144" height="39"/>
@@ -316,18 +384,17 @@
 			<rectangle>
 				<reportElement uuid="ab718dde-85d5-4c96-b595-1c2df577c5ef" mode="Transparent" x="591" y="0" width="117" height="39"/>
 			</rectangle>
-			<rectangle>
-				<reportElement uuid="2d99775a-646f-4357-b1d4-9e6b1e217177" mode="Transparent" x="708" y="0" width="78" height="39"/>
-			</rectangle>
 			<rectangle radius="10">
 				<reportElement uuid="004277c2-8a42-41d5-99b1-d9351770a198" style="conditionnal_state" x="197" y="24" width="10" height="10">
 					<printWhenExpression><![CDATA[$F{state} != null]]></printWhenExpression>
 				</reportElement>
 			</rectangle>
 			<textField isBlankWhenNull="true" hyperlinkType="Reference" hyperlinkTarget="Blank">
-				<reportElement uuid="e52b3426-4c76-46f7-85d6-7239447ab282" style="base" x="81" y="0" width="111" height="20"/>
+				<reportElement uuid="e52b3426-4c76-46f7-85d6-7239447ab282" style="base" x="117" y="0" width="75" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{target_name}]]></textFieldExpression>
+				<hyperlinkReferenceExpression><![CDATA["http://www.google.com"]]></hyperlinkReferenceExpression>
+				<hyperlinkTooltipExpression><![CDATA["Click here"]]></hyperlinkTooltipExpression>
 			</textField>
 			<textField pattern="" hyperlinkType="Reference" hyperlinkTarget="Blank">
 				<reportElement uuid="6ce19214-11bd-4dd6-a911-828901e2e260" style="base" x="447" y="0" width="144" height="20"/>
@@ -335,6 +402,12 @@
 				<textFieldExpression><![CDATA[$F{medicine_name}]]></textFieldExpression>
 				<hyperlinkReferenceExpression><![CDATA["http://localhost:3000/fra/backend/procedures/"+$F{id}]]></hyperlinkReferenceExpression>
 			</textField>
+			<componentElement>
+				<reportElement uuid="5cddaa0c-046c-4931-9757-bba1070788ae" x="82" y="4" width="34" height="33"/>
+				<jr:DataMatrix xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" textPosition="bottom">
+					<jr:codeExpression><![CDATA["http://unstable.ergolis.com/fra/backend/products/"+$F{target_id}]]></jr:codeExpression>
+				</jr:DataMatrix>
+			</componentElement>
 		</band>
 	</detail>
 	<pageFooter>
