--- a/config/locales/spa/models.yml
+++ b/config/locales/spa/models.yml
@@ -928,6 +928,7 @@ spa:
     # planned_at: "Prévu à"
     # planned_depreciations: "Amortissements prévus"
     # planned_on: "Prévu le"
+    # population_counting: "Population counting"
     # position: "Position"
     # postcode: "Code postal"
     # preferences: "Préférences"
