--- a/config/locales/eng/models.yml
+++ b/config/locales/eng/models.yml
@@ -1112,6 +1112,7 @@ eng:
     planned_at: "Planned at"
     planned_depreciations: "Planned depreciations"
     planned_on: "Planned on"
+    # population_counting: "Population counting"
     position: "Position"
     posologies: "Posologies" #?
     postcode: "Postcode"
