--- a/config/locales/jpn/action.yml
+++ b/config/locales/jpn/action.yml
@@ -417,11 +417,7 @@ jpn:
       # edit: "Modifier le mouvement de stock\_: %{name}"
       # new: "Enregistrement d’un mouvement de stock"
     backend/product_nature_abilities: #?
-    backend/product_nature_categories:
-      # edit: "Modifier la catégorie de produits\_: %{name}"
-      # index: "Catégories de produits"
-      # new: "Ajout d’une nouvelle catégorie de produits"
-      # show: "Détail de la catégorie\_: %{name}"
+    backend/product_nature_categories: #?
     backend/product_nature_indicators: #?
     backend/product_nature_prices: #?
     backend/product_nature_variants:
@@ -625,7 +621,6 @@ jpn:
     # backend/product_groups: "Lot de produits"
     # backend/product_localizations: "Localisations"
     # backend/product_moves: "Mouvements de stock"
-    # backend/product_nature_categories: "Catégories de type de produits"
     # backend/product_natures: "Types de produits"
     # backend/product_price_listings: "Listes de prix"
     # backend/product_price_templates: "Types de prix"
