--- a/config/locales/jpn/models.yml
+++ b/config/locales/jpn/models.yml
@@ -929,6 +929,7 @@ jpn:
     # planned_at: "Prévu à"
     # planned_depreciations: "Amortissements prévus"
     # planned_on: "Prévu le"
+    # population_counting: "Population counting"
     # position: "Position"
     # postcode: "Code postal"
     # preferences: "Préférences"
