--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -475,11 +475,7 @@ spa:
       # edit: "Modifier le mouvement de stock\_: %{name}"
       # new: "Enregistrement d’un mouvement de stock"
     backend/product_nature_abilities: #?
-    backend/product_nature_categories:
-      # edit: "Modifier la catégorie de produits\_: %{name}"
-      # index: "Catégories de produits"
-      # new: "Ajout d’une nouvelle catégorie de produits"
-      # show: "Détail de la catégorie\_: %{name}"
+    backend/product_nature_categories: #?
     backend/product_nature_components: #?
     backend/product_nature_indicators: #?
     backend/product_nature_prices: #?
@@ -709,7 +705,6 @@ spa:
     # backend/product_groups: "Lot de produits"
     # backend/product_localizations: "Localisations"
     # backend/product_moves: "Mouvements de stock"
-    # backend/product_nature_categories: "Catégories de type de produits"
     # backend/product_natures: "Types de produits"
     # backend/product_price_listings: "Listes de prix"
     # backend/product_price_templates: "Types de prix"
