Adds locale/tz to login

--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -834,8 +834,8 @@ arb:
       # not_found: "n’a pas été trouvé(e)"
       # not_locked: "n’était pas verrouillé(e)"
       not_saved:
-        # one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e) :"
-        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e) :"
+        # one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e)\_:"
+        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e)\_:"
     template:
       # body: "Il y a eu des problèmes avec les champs suivants\_:"
       header:
@@ -1736,6 +1736,7 @@ arb:
     tax_declaration_create: "اضافة تصريح جديد" #?
     theoric_quantity: "الكمية النظرية"
     # third_informations: "Informations tierces"
+    # time_zone: "Fuseau horaire"
     to: "الى"
     # to_bank_on: "À encaisser le"
     to_date: "الى تاريخ"
