--- a/config/locales/spa/action.yml
+++ b/config/locales/spa/action.yml
@@ -743,8 +743,8 @@ spa:
       # not_found: "n’a pas été trouvé(e)"
       # not_locked: "n’était pas verrouillé(e)"
       not_saved:
-        # one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e) :"
-        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e) :"
+        # one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e)\_:"
+        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e)\_:"
     template:
       # body: "Il y a eu des problèmes avec les champs suivants\_:"
       header:
@@ -1555,6 +1555,7 @@ spa:
     tax_declaration_create: "Añadir una nueva declaración" #?
     theoric_quantity: "cantidad teorica"
     # third_informations: "Informations tierces"
+    # time_zone: "Fuseau horaire"
     to: "Al"
     # to_bank_on: "À encaisser le"
     # to_date: "Au"
