--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -958,7 +958,7 @@ fra:
     picture_file_size: "Taille du fichier photo"
     picture_updated_at: "Fichier photo mis à jour le"
     place: "Place"
-    planned_at: "Prévu à"
+    planned_at: "Prévu à" #?
     planned_depreciations: "Amortissements prévus"
     planned_on: "Prévu le"
     # population_delta: "Population delta"
