--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -190,18 +190,20 @@ arb:
         # unit: "Unité"
         # variety: "Variété"
       items:
-        # adult_cow: "Vache adulte"
         # all_in_one_equipment: "Équipement tout en un"
         # building: "Batiments"
         # calf: "Veau"
+        # female_adult_cow: "Vache"
+        # female_young_cow: "Génisse"
         # grain: "Grain"
         # land_parcel: "Parcelle"
+        # male_adult_cow: "Taureau"
+        # male_young_cow: "Génisse"
         # milk: "Lait"
         # straw: "Paille"
         # tractor: "Tracteur"
         # trail: "Remorque"
         # wheat_crop: "Culture de graminés"
-        # young_cow: "Génisse"
       # name: "Type de produits"
     production_natures:
       items:
