Prepares version files and translations for 0.4.2

--- a/config/locales/fra/models.yml
+++ b/config/locales/fra/models.yml
@@ -762,10 +762,10 @@ fra:
     production_chain: "Chaîne de production"
     production_chain_conveyor: "Convoyeur de chaîne de production" #?
     production_chain_work_center: "Centre d’opérations de chaîne de production"
-    # production_chain_work_center_lines: "Production chain work center lines"
-    # production_chain_work_center_uses: "Production chain work center uses"
-    # production_chain_work_centers: "Production chain work centers"
-    # production_chains: "Production chains"
+    production_chain_work_center_lines: "Élément de centre d’opérations de chaîne de production"
+    production_chain_work_center_uses: "Utilisation de centre d’opérations de chaîne de production"
+    production_chain_work_centers: "Centres d’opérations de chaîne de production"
+    production_chains: "Chaîne de production"
     products: "Produits"
     products_accounts: "Comptes produits"
     profession: "Profession"
@@ -924,20 +924,20 @@ fra:
     transporters: "Transporteurs"
     transports: "Transports"
     type: "Type" #?
-    # unconfirmed_stock_transfers: "Unconfirmed stock transfers"
-    # undelivered_incoming_deliveries: "Undelivered incoming deliveries"
-    # undelivered_outgoing_deliveries: "Undelivered outgoing deliveries"
+    unconfirmed_stock_transfers: "Transferts de stock non-confirmés"
+    undelivered_incoming_deliveries: "Approvisionnement non-confirmés"
+    undelivered_outgoing_deliveries: "Expéditions non-confirmées"
     undelivered_quantity: "Reste à livrer"
     unique_tracking: "Numéro unique"
     unit: "Unité"
     unit_quantity: "Quantité par unité de surface"
     units: "Unités"
-    # unlocked_payments: "Unlocked payments"
-    # unpaid_responsibles: "Unpaid responsibles"
+    unlocked_payments: "Réglements non-verrouillés"
+    unpaid_responsibles: "Responsables de ventes impayées"
     unpaid_sales: "Ventes impayées"
     unquantifiable: "Non quantifiable"
-    # untransportered_deliveries: "Untransportered deliveries"
-    # unused_conveyors: "Unused conveyors"
+    untransportered_deliveries: "Expéditions en attente d'un transport"
+    unused_conveyors: "Convoyeurs inutilisés"
     updated_at: "Mis à jour le"
     updater: "Modificateur"
     usable_incoming_payments: "Encaissements utilisables"
@@ -946,7 +946,7 @@ fra:
     usage_duration: "Durée d’utilisation (heures)"
     use_range: "Utiliser un intervalle de quantité"
     used_amount: "Montant utilisé"
-    # useful_lines: "Useful lines"
+    useful_lines: "Éléments utiles"
     user: "Utilisateur"
     users: "Utilisateurs"
     uses: "Matériels utilisés"
@@ -956,8 +956,8 @@ fra:
     vat_submissive: "Soumis à la TVA"
     virtual: "Virtuel"
     virtual_quantity: "Stock virtuel"
-    # waiting_deliveries: "Waiting deliveries"
-    # waiting_transporters: "Waiting transporters"
+    waiting_deliveries: "Livraisons en attente"
+    waiting_transporters: "Transporteurs en attente"
     warehouse: "Lieu de stockage"
     warehouses: "Lieux de stockage"
     webpass: "Mot de passe web"
