--- a/config/locales/fra/action.yml
+++ b/config/locales/fra/action.yml
@@ -19,7 +19,7 @@ fra:
       edit: "Modifier l’immobilisation\_: %{name}"
       index: "Immobilisations"
       new: "Nouvelle immobilisation"
-      # sell: "Sell asset"
+      sell: "Vendre l’immobilisation"
       show: "Immobilisation\_: %{name}"
     bank_statements:
       edit: "Modifier le relevé N°%{number}"
@@ -798,7 +798,7 @@ fra:
     hour_duration:
       one: "Temps d’utilisation total\_: %{count} heure"
       other: "Temps d’utilisation total\_: %{count} heures"
-      # zero: "No Time used"
+      zero: "Pas de temps d’utilisation"
     iban: "Numéro de compte bancaire internationale (IBAN)"
     identification: "Nom et codes du produit"
     import: "Importer"
