--- a/config/locales/fra/help/product_natures-index.txt
+++ b/config/locales/fra/help/product_natures-index.txt
@@ -1,29 +1,12 @@
-====== Comment gérer ses produits ? ======
+====== Types de produits ======
 
-===== Qu'est-ce qu'un produit ? =====
+===== Qu'est-ce qu'un type de produit ? =====
 
- Vous avez ici accès à toutes les informations relatives à votre produits et à ses prix.
+Un type de produit possede un ou plusieurs produits via une ou plusieurs variantes.
 
-  * Vous avez le récapitulatif de **l'état des stocks** de votre produit pour tous les lieux de stockage qui contiennent ce produit.
+produit {{icon:resize-horizontal}} variante {{icon:resize-horizontal}} type de produit
 
-  * **Les tarifs** de votre produit sont également détaillés, le nom de la **catégorie** étant un lien vous redirigeant vers l'affichage de celle-ci et donc de la grille de tarif relative à cette catégorie.
+Le type de produit porte les informations de gestion comptable, de gestion de stocks, de variété racine des produits qu'il peut contenir.
 
-  * Les **composants** désignent le ou les produits dont est constitué un autre produit. Concrètement, une bouteille de vin est composée d'une bouteille, d'une étiquette, d'une capsule, d'un bouchon et de vin. Définir les composants d'un produit permet de **gérer les stocks d'un produit et de tous ses composants** lors de la **production** de celui-ci.
 
-===== La recherche d'un produit =====
-La barre de recherche d'un produit vous permet de trouver des produits que vous avez préalablement enregistré. Cette recherche s'effectue sur tous les champs, c'est à dire sur toutes les informations concernant le produit. 
-
-Vous pouvez saisir dans le champ de recherche tout ou seulement une partie d'un mot.
-
-===== L'affichage des produits =====
-Une fois votre recherche effectuée, vous avez accès à un tableau vous récapitulant toutes les informations concernant le ou les produits trouvés. 
-Dans le tableau, le nom du prix est un lien vous redirigeant vers l'affichage de votre produit récapitulant toutes les informations correspondantes au produit et d'ou vous pouvez également ajouter ou supprimer un prix pour ce produit.
-
-===== Gérer les produits =====
-
-Pour créer un nouveau produit, il vous suffit de renseigner les différents paramètres qui vous sont demandés. Certains sont obligatoires (encadrés bleux) et d'autres sont facultatifs (encadrés gris). La création ne peut s'effectuer uniquement que si tous les champs obligatoires ont été correctement renseignés.
-
-Le nom du produit doit être unique pour chaque produit.
-
-Les informations concernant la **gestion des stocks** sont facultatives. Dans le cas ou pour un produit vous ne désirez pas gérer ses stocks, il vous suffit de na pas cocher "Gérer les stocks" et les informations relatives à la gestion des stocks ne seront pas demandées. Dans le cas contraire, renseignez les quantités vous servant de base à votre gestion de stocks (minimum, minimum critique, maximum) et le **lieu de stockage** auxquelles sont rattachées ces valeurs si vous possédez plusieurs lieux de stockage.
-
+{{icon:warning-sign}}
