--- a/config/locales/arb/action.yml
+++ b/config/locales/arb/action.yml
@@ -834,14 +834,15 @@ arb:
       # not_found: "n’a pas été trouvé(e)"
       # not_locked: "n’était pas verrouillé(e)"
       not_saved:
-        # one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e)\_:"
-        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e)\_:"
+        # one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e) :"
+        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e) :"
     template:
       # body: "Il y a eu des problèmes avec les champs suivants\_:"
       header:
         # one: "%{count} erreur a empêché l’enregistrement (%{model})"
         # other: "%{count} erreurs ont empêché l’enregistrement (%{model})"
   labels:
+    # abilities: "Compétences"
     account_accruals: "حسابات الاستحقاق"
     account_attorney_to_create: "-- انشاء حساب للوكيل بشكل اوتوماتيكي --"
     account_claims_assets: "الدين"
@@ -902,6 +903,7 @@ arb:
     # add_subscription_for_sale_line: "Ajouter un abonnement pour la ligne N°%{position}"
     # add_support: "Ajouter un support de production"
     # add_treatment: "Ajouter un traitement"
+    # add_variant: "Ajouter une variante"
     # add_watching: "Ajouter un produit de référence"
     # add_website: "Ajouter un site Web"
     # add_x: "Ajouter «\_%{x}\_»"
