--- a/config/locales/arb/nomenclatures.yml
+++ b/config/locales/arb/nomenclatures.yml
@@ -63,27 +63,98 @@ arb:
         # fr_pcg82: "Plan comptable général de 1982 - Arrêté du 14/12/2007"
         # fr_pcga: "Plan comptable agricole - Arrêté du 11/12/1986"
       items:
+        # accrued_interest: "Intérêts courus"
+        # accrued_interests_on_bank: "Intérêts courus auprès des établissements de crédit"
         # adult_animal_asset: "Animaux reproducteurs (adulte)"
+        # adult_animal_asset_depreciations: "Ammortissements des animaux reproducteurs"
         # adult_animal_charge: "Animaux reproducteurs (adultes)"
         # adult_animal_product: "Animaux reproducteurs (adultes)"
         # animal_derivative_stock: "Produits finis animaux"
         # animal_derivatives_product: "Vente de produits animaux"
+        # animal_medicine_stock: "Stock de produits de défense des animaux"
+        # animal_reproduction_stock: "Stock de produits de reproduction animale"
+        # asset_depreciations: "Ammortissements"
+        # assets: "Comptes d'immobilisations"
+        # biocorporeal_asset_depreciations: "Ammortissements des biens vivants"
         # building_asset: "Bâtiments"
+        # capital: "Capital"
+        # cooperative_participation_asset: "Sociétés coopératives agricoles (sauf CUMA)"
+        # corporeal_asset_depreciations: "Ammortissements des immobilisations corporelles"
+        # end_products_stock: "Stock de produits finis"
         # equipment_asset: "Matériels"
+        # equipment_asset_depreciations: "Ammortissements des installations techniques, matériels et outillage"
+        # equipment_cooperative_participation_asset: "CUMA"
         # equipment_rent_charge: "Location de matériel"
+        # equipment_subventions: "Subventions d'équipement"
+        # fertilizer_stock: "Stock d'engrais et amendements"
+        # financial_year_result: "Résultat de l'exercice"
+        # financial_year_result_balance: "Résultat de l'exercice (bénéfice ou perte)"
+        # financial_year_result_loss: "Résultat de l'exercice (perte)"
+        # financial_year_result_profit: "Résultat de l'exercice (bénéfice)"
+        # fuel_stock: "Stock de carburants et lubrifiants"
+        # general_installation_asset: "Installations générales"
+        # general_installation_asset_depreciations: "Ammortissements des installations"
+        # incorporeal_asset_depreciations: "Ammortissements des immobilisations incorporelles"
+        # industrial_cooperative_participation_asset: "SICA"
+        # initial_individual_capital: "Capital individuel initial"
+        # initial_individual_capital_variations: "Variation du capital individuel initial"
+        # installation_sustainable_plant_asset: "Aménagements des plantations pérennes"
+        # land_loans: "Emprunts fonciers"
         # land_parcel_asset: "Terrains nus"
+        # land_parcel_asset_depreciations: "Ammortissements des terrains de gisement"
         # land_parcel_rent_charge: "Fermages et loyers du foncier"
         # land_parcel_sell_product: "Immobilisations corporelles (hors biens vivants)"
+        # legal_reserves: "Réserve légale"
+        # livestock_feed_stock: "Stock d'aliment du bétail"
+        # long_cycle_cultures_advances: "Avances aux cultures (cycle long)"
+        # long_term_loans: "Emprunts à moyen et long terme"
         # long_time_animal_stock: "Animaux (cycle long)"
+        # maintenances_consumables_stock: "Stock de produits d'entretien"
+        # office_equipment_asset: "Matériel de bureau et informatique"
+        # office_equipment_asset_depreciations: "Ammortissements des équipements de bureau"
+        # office_furniture_asset: "Mobilier"
+        # office_furniture_asset_depreciations: "Ammortissements du mobilier"
         # other_animal_charge: "Autres animaux"
         # other_animal_product: "Autres animaux"
-        # plant_derivative_stock: "Produits finis végétaux"
+        # other_building_asset_depreciations: "Ammortissements des constructions sur sol d'autrui"
+        # others_asset: "Autres immobilisations"
+        # others_asset_depreciations: "Ammortissements des autres immobilisations"
+        # others_consumables_stock: "Stock d'autres consommables"
+        # others_incorporeal_asset: "Autres immobilisations incorporelles (Droits de plantation, Quotas)"
+        # others_incorporeal_asset_depreciations: "Autres immobilisations incorporelles"
+        # others_professional_agricultural_participation_asset: "Autres participations à des OPA"
+        # others_reserves: "Autres réserves"
+        # others_subventions: "Autres subventions d'investissement"
+        # own_building_asset_depreciations: "Ammortissements des constructions sur sol propre"
+        # ownership_asset: "Titres immobilisés (droits de propriété)"
+        # ownership_loan: "Prêts consentis"
+        # plant_derivative_stock: "Stock de produits finis végétaux"
         # plant_derivatives_product: "Vente de produits végétaux"
+        # plant_medicine_stock: "Stock de produits de défense des végétaux"
+        # professional_agricultural_organization_asset: "Participations à des organismes professionnels agricoles"
         # raw_material_charge: "Matières premières"
+        # reevaluation_gaps: "Ecart de réévaluation"
+        # reserves: "Réserves"
+        # seed_stock: "Stock de semences et plants"
         # service_animal_asset: "Animaux de service"
+        # service_animal_asset_depreciations: "Ammortissements des animaux de services"
+        # short_cycle_cultures_advances: "Avances aux cultures (cycle court)"
+        # short_cycle_cultures_advances_culturals_ways: "Avances aux cultures (cycle court) - Façons culturales"
+        # short_cycle_cultures_advances_fertilizers: "Avances aux cultures (cycle court) - Engrais et ammendement"
+        # short_cycle_cultures_advances_plants_medicines: "Avances aux cultures (cycle court) - Produits de défense des végétaux"
+        # short_cycle_cultures_advances_seeds: "Avances aux cultures (cycle court) - Semences et plants"
+        # short_term_loans: "Emprunts à court terme"
         # short_time_animal_stock: "Animaux (cycle court)"
-        # short_time_crop_stock: "Avances aux cultures (cycle court)"
         # short_time_plant_crop_variation: "Végétaux en terre (cycle court)"
+        # stocks: "Comptes de stocks et en-cours"
+        # sustainable_packaging_asset: "Emballages récupérables"
+        # sustainable_packaging_asset_depreciations: "Ammortissements des emballages réutilisables"
+        # sustainables_plants_asset: "Plantations pérennes"
+        # sustainables_plants_asset_depreciations: "Ammortissements des plantations pérennes"
+        # sustainables_plants_on_other_landparcel_asset: "Plantations pérennes sur sol d'autrui"
+        # sustainables_plants_on_own_landparcel_asset: "Plantations pérennes sur sol propre"
+        # transport_vehicle_asset: "Matériel de transport"
+        # transport_vehicle_asset_depreciations: "Ammortissements des véhicules de transport"
         # young_animal_asset: "Animaux reproducteurs (jeunes de renouvellement)"
         # young_animal_charge: "Animaux reproducteurs (jeunes de renouvellement)"
         # young_animal_product: "Animaux reproducteurs (jeunes de renouvellement)"
@@ -198,7 +269,7 @@ arb:
         # grain: "Grain"
         # land_parcel: "Parcelle"
         # male_adult_cow: "Taureau"
-        # male_young_cow: "Génisse"
+        # male_young_cow: "Taurillon"
         # milk: "Lait"
         # straw: "Paille"
         # tractor: "Tracteur"
