--- a/config/locales/eng/action.yml
+++ b/config/locales/eng/action.yml
@@ -699,14 +699,15 @@ eng:
       # not_found: "n’a pas été trouvé(e)"
       # not_locked: "n’était pas verrouillé(e)"
       not_saved:
-        # one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e)\_:"
-        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e)\_:"
+        # one: "1 erreur a empêché ce(tte) %{resource} d’être sauvegardé(e) :"
+        # other: "%{count} erreurs ont empêché ce(tte) %{resource} d’être sauvegardé(e) :"
     template:
       body: "There were problems with the following fields:"
       header:
         one: "1 error prohibited this %{model} from being saved"
         other: "%{count} errors prohibited this %{model} from being saved"
   labels:
+    # abilities: "Compétences"
     # account_accruals: "Comptes de régularisation"
     # account_attorney_to_create: "— Créer automatiquement un compte mandataire —"
     # account_claims_assets: "Créances"
@@ -765,6 +766,7 @@ eng:
     add_subscription_for_sale_line: "Add subscription for sale line #%{position}"
     # add_support: "Ajouter un support de production"
     add_treatment: "Add treatment"
+    # add_variant: "Ajouter une variante"
     # add_watching: "Ajouter un produit de référence"
     add_website: "Add website"
     # add_x: "Ajouter «\_%{x}\_»"
